include/hybridengine/bind/ms_bind.h

typedef struct ms_engine ms_engine;   // HybridEngine::App::Engine*
typedef struct ms_scene ms_scene;     // HybridEngine::Core::Scene*
typedef struct ms_go ms_go;           // HybridEngine::Core::SceneObject*
typedef int64_t ms_id;                // InstanceId（uint64→C# long；设计 long——Windows long=32 修正为 int64_t）
typedef uint64_t ms_hash;             // FNV-1a 64
/* ---- 错误码：0=OK；<0=绑定层（句柄/类型/参数）；>0=引擎（Core/Asset 映射） ---- */
enum {
  MS_BIND_OK = 0,
  MS_ERR_NULL_HANDLE = -1,
  MS_ERR_BAD_TYPE = -2,
  MS_ERR_BAD_ARG = -3,
  MS_ERR_INVALID_OP = 1,
  MS_ERR_NOT_FOUND = 2,
  MS_ERR_IO = 3,
  MS_ERR_HASH_MISMATCH = 4,
  MS_ERR_TRAVERSAL_DENIED = 5,
  MS_ERR_DUPLICATE_NAME = 6,
  MS_ERR_UNKNOWN_FIELD = 7,
  MS_ERR_NOT_SUPPORTED = 8,
  MS_ERR_THREAD = 9
};
MS_API ms_engine* ms_engine_create(const char* title, int width, int height, int* err);
MS_API void       ms_engine_destroy(ms_engine* e);
MS_API int        ms_engine_tick(ms_engine* e, double dt);
MS_API int        ms_engine_render(ms_engine* e, void* rendererCtx);   // 渲染委托（ctx 预留 C# OnRender——内置 parity 校准场景回退）
MS_API int        ms_engine_pump(ms_engine* e);                        // 无窗口=0；窗口关闭=1（quit 请求）
MS_API int        ms_engine_resize(ms_engine* e, int w, int h);
MS_API double     ms_engine_last_frame_ms(ms_engine* e);
MS_API ms_hash    ms_engine_render_hash(ms_engine* e);                 // 当前帧 FNV（parity）
/* ---- 场景 ---- */
MS_API ms_scene*  ms_engine_scene(ms_engine* e);   // 活动场景（单场景=唯一场景——兼容旧调用点）
/* ---- P2/多场景（SceneManager）：引擎持有已加载场景**列表** + 活动场景索引 ----
   兼容承诺：ms_engine_scene / 既有 ms_scene_* 仍以「活动场景」为准，单场景调用点零改动；
   且 ms_scene* 句柄对列表内任意场景都有效（不再限活动场景）。
   生命周期：所有已加载场景都参与 Engine::Tick（各自 Lifecycle）；渲染把全部场景**合成为一趟光栅**
   （逐场景各跑一趟会各自清屏 → 只剩最后一个可见）。
   卸载（ms_scene_unload）：先走 Scene::RemoveRoot 拆除该场景全部对象（OnDisable/OnDestroy →
   托管登记/协程/Invoke 清退）再移除槽位；最后一个场景不可卸载（Scene() 恒有效）。
   **句柄生命周期**：ms_scene* 是场景对象的裸指针——卸载后即悬垂，且按指针成员关系判定对已释放地址
   本质歧义（地址可能被新场景复用），故**不可**依赖「对旧句柄调用会报错」；宿主卸载后应按索引重查。
   **按场景入参**：ms_scene_save / ms_scene_find / ms_scene_go_get / ms_scene_root_count/get 一律作用于
   传入的场景（此前误用活动场景——单场景下不可见，多场景会读错场景）；ms_go_add_child /
   ms_transform_set_parent 作用于对象**所属场景**（不会把子对象建到别的场景）。 */
MS_API int ms_scenes_count(ms_engine* e, int* outCount);                        // 已加载场景数（≥1）
MS_API int ms_scenes_get(ms_engine* e, int index, ms_scene** outScene);         // 按索引取场景句柄
MS_API int ms_scene_active_index(ms_engine* e, int* outIndex);                  // 活动场景索引
MS_API int ms_scene_set_active_index(ms_engine* e, int index);                  // 切换活动场景（越界=BAD_ARG）
MS_API int ms_scene_name(ms_engine* e, ms_scene* s, char* out, int cap);        // 场景名（UTF-8）
MS_API int ms_scene_new(ms_engine* e, const char* name, ms_scene** outScene);   // 附加新建空场景（活动场景不变）
MS_API int ms_scene_load_additive(ms_engine* e, const char* assetPath, ms_scene** outScene);   // 附加加载（含脚本重放；**含脚本组件的场景要求脚本桥+重放回调已注册**，否则返回 MS_ERR_NOT_SUPPORTED(8)——与 ms_scene_load 同一前置条件，不静默丢脚本）
MS_API int ms_scene_unload(ms_engine* e, ms_scene* s);                          // 卸载场景（拆除对象 + 移除槽位）
MS_API int ms_scene_add_root(ms_engine* e, ms_scene* s, const char* name, ms_id* outId);
MS_API int        ms_scene_save(ms_engine* e, ms_scene* s, const char* assetPath);
MS_API int        ms_scene_load(ms_engine* e, ms_scene* s, const char* assetPath);
MS_API int        ms_scene_go_get(ms_engine* e, ms_scene* s, ms_id id, ms_go** outGo);
MS_API int        ms_scene_root_count(ms_engine* e, ms_scene* s, int* outCount);
MS_API int        ms_scene_root_get(ms_engine* e, ms_scene* s, int index, ms_go** outGo);
MS_API int        ms_scene_find(ms_engine* e, ms_scene* s, const char* name, ms_go** outGo);   // 按名 DFS（未找到=MS_ERR_NOT_FOUND）
/* ---- 输入（G2/t137：C++ Input 全口径经 ABI；vk=KeyCode 值（Win32 VK 直通）） ---- */
MS_API int    ms_input_key_down(ms_engine* e, int vk);                    // 本帧按下沿（EndFrame 清）
MS_API int    ms_input_key_up(ms_engine* e, int vk);                      // 本帧抬起沿
MS_API int    ms_input_get_key(ms_engine* e, int vk);                     // 当前按住
MS_API double ms_input_axis(ms_engine* e, const char* name);              // Horizontal/Vertical（WASD+方向键）
MS_API int    ms_input_get_button(ms_engine* e, const char* action);      // Fire1/Jump/Submit/Cancel
/* ---- 错误文案（t2：错误码→人类可读 UTF-8；仅新增——不改任何既有函数/ABI） ---- */
MS_API const char* ms_bind_error_text(int code);   // 静态 UTF-8 文案（调用方只读不释放）；未知码="未知错误码"
/* ---- 测试辅助（句柄计数断言——验收 #2） ---- */
MS_API int    ms_bind_live_engine_count(void);
/* ---- GUI 平面命令录制（t1：ms_rnd_* —— 与 IRenderer 原语 1:1；命令跨帧保持——host 帧尾清） ----
   ms_engine_render：列表空=既有路径（黄金帧契约 4634E387E024BE90 逐位不变）；非空=双面（parity+窗口）先清黑→按序回放。
   命名注：ms_rnd_clear(颜色) = 全屏 Clear 原语（IRenderer::Clear 语义——C# Interop 已声明同形）；清空录制列表=ms_rnd_clear_list。
   t1 alpha：ms_rnd_* 颜色参数 = 0xAARRGGBB（A=alpha——填充原语 straight-alpha 合成 out=(src*a+dst*(255-a)+127)/255；
   A=FF=直写快路径（既有输出逐位不变）；A=0=跳过；现调用方全 FF=行为不变；Clear=整帧覆盖（alpha 忽略）；blit_rect=不透明拷贝）。 */
MS_API int ms_rnd_clear_list(ms_engine* e);
// t-perf：**批量画圆**（弹幕/粒子负载）——一次调用画 N 个同色圆，只产生 1 条命令。
// xy_r = 每圆 3 个 double（x,y,r），count 个圆。理由：逐颗一条命令时"入队+析构+分发"的开销
// 与像素工作量同量级（实测 897 条/帧 ≈ 1.3ms）；同色批量后 800 条 → 8 条。
MS_API int ms_rnd_fill_circles(ms_engine* e, const double* xy_r, int count, uint32_t color);
MS_API int ms_rnd_draw_circles(ms_engine* e, const double* xy_r, int count, double thickness, uint32_t color);
// t-sprite：**批量子弹**（核心圆 + 外圈，整批同款）——xy 每颗 2 个 double；一次调用画 N 颗。
// 语义与「先 ms_rnd_fill_circles 再 ms_rnd_draw_circles」逐位等价；软件渲染器走烘焙精灵（每行一次 memcpy）。
MS_API int ms_rnd_bullets(ms_engine* e, const double* xy, int count, double r, double thickness,
                          uint32_t coreColor, uint32_t rimColor);
MS_API int ms_rnd_clear(ms_engine* e, uint32_t color);                                                // 全屏 Clear（color=0xAARRGGBB；alpha 忽略=整帧覆盖）
MS_API int ms_rnd_clear_rect(ms_engine* e, double x, double y, double w, double h, uint32_t color);   // ClearRect（=FillRect 同语义）
MS_API int ms_rnd_fill_rect(ms_engine* e, double x, double y, double w, double h, uint32_t color);
MS_API int ms_rnd_fill_rounded_rect(ms_engine* e, double x, double y, double w, double h, double radius, uint32_t color);
MS_API int ms_rnd_draw_line(ms_engine* e, double x1, double y1, double x2, double y2, uint32_t color, double thickness);
MS_API int ms_rnd_fill_circle(ms_engine* e, double cx, double cy, double r, uint32_t color);
MS_API int ms_rnd_draw_circle(ms_engine* e, double cx, double cy, double r, uint32_t color, double thickness);
MS_API int ms_rnd_fill_triangle(ms_engine* e, double x1, double y1, double x2, double y2, double x3, double y3, uint32_t color);
MS_API int ms_rnd_fill_quad(ms_engine* e, double x1, double y1, double x2, double y2, double x3, double y3, double x4, double y4, uint32_t color);
MS_API int ms_rnd_blit_rect(ms_engine* e, double x, double y, double w, double h, const uint32_t* srcPixels);   // 像素立即拷入 Op（无悬垂）；不透明拷贝（背靠背语义）
MS_API int ms_rnd_blit_alpha(ms_engine* e, double x, double y, double w, double h, const uint32_t* srcPixels);  // t1：src=0xAARRGGBB 逐像素 straight-alpha 合成（与 blit_rect 仅合成差异；像素立即拷入 Op——无悬垂）
/* t6：矩形裁剪（Clip/Scissor）——push=入栈（≤8 深；栈顶=当前裁剪——嵌套仅栈顶生效=保存/恢复语义；坐标=设计坐标系）；
   所有绘制原语（含 Blit 与文本 span）回放时按栈顶矩形裁剪（越界内容不画出=展示面"内容裁剪"）；pop=恢复上一级。
   空栈 pop=MS_ERR_INVALID_OP；超深 push（第 9 个）=MS_ERR_BAD_ARG（不记录——回放栈与录制镜像一致）。 */
MS_API int ms_rnd_clip_push(ms_engine* e, double x, double y, double w, double h);
MS_API int ms_rnd_clip_pop(ms_engine* e);
/* t-rot-clip：旋转矩形裁剪（cx,cy,w,h,angleRad——中心旋转；精确斜劈/分离位移；栈顶生效≤8 深；同矩形栈语义与错误码） */
MS_API int ms_rnd_clip_push_rotated(ms_engine* e, double cx, double cy, double w, double h, double angleRad);
/* ---- 文本（t1：GDI 白掩码光栅——RuntimeFont LRU 512；UTF-8；size=像素字号；CJK 直支持） ----
   ms_text_draw=录制 Text 命令（录制时 GDI 光栅化一次——t10 掩码共享缓存+引用计数（pinned）：Op 持有共享引用零拷贝；
   回放零系统调用=严格确定性）；随 ms_engine_render 双面回放。 */
MS_API int ms_text_draw(ms_engine* e, const char* utf8, double x, double y, double size, uint32_t color);
MS_API int ms_text_measure(ms_engine* e, const char* utf8, double size, double* outW, double* outH);          // 像素宽/高
/* ---- 输入鼠标（t1：边沿=本帧（EndFrame 清——与 ms_input_key_down 同式）；wheel=本帧累计） ---- */
MS_API double ms_input_mouse_x(ms_engine* e);                    // 当前客户区 x
MS_API double ms_input_mouse_y(ms_engine* e);                    // 当前客户区 y
MS_API int    ms_input_mouse_button(ms_engine* e, int button);   // 当前按住（0=左 1=中 2=右；越界=假）
MS_API int    ms_input_mouse_button_down(ms_engine* e, int button);   // 本帧按下沿
MS_API int    ms_input_mouse_button_up(ms_engine* e, int button);     // 本帧抬起沿
MS_API double ms_input_mouse_wheel_delta(ms_engine* e);          // 本帧累计滚轮格数（±1/格）
MS_API double ms_input_mouse_design_x(ms_engine* e);    // t1.1：设计面鼠标 x（ViewportPolicy ToVirtual——Letterbox/DPI 自动换算）
MS_API double ms_input_mouse_design_y(ms_engine* e);
// 自动化输入注入（脚本/测试驱动用：直接写 engine->Input()，与窗口回调同一对象、语义一致）
MS_API int    ms_input_inject_key(ms_engine* e, int vk, int down);
MS_API int    ms_input_inject_mouse(ms_engine* e, double x, double y, int button, int down);
MS_API int    ms_input_inject_move(ms_engine* e, double x, double y);
MS_API int    ms_input_inject_wheel(ms_engine* e, double x, double y, int delta);    // t1.1：设计面鼠标 y
/* ---- 音频（t3：WinMM(mci) 桥——引擎级句柄；单线程（跨线程=MS_ERR_THREAD）；时基=毫秒；状态机=closed/open/playing/paused） ----
   ms_audio_open 返回：≥10=句柄 id（槽位句柄——与 MS_ERR_* 正值 1..9 错开防歧义；0=不合法）；失败=MS_ERR_*（文件不存在=MS_ERR_NOT_FOUND；后端打开失败=MS_ERR_IO）。
   句柄归属=引擎（ms_engine_destroy 释放全部——不强求显式 close）；句柄时序=close 后全部调用→MS_ERR_NOT_FOUND。
   ms_audio_volume：真增益（0..1——mci `setaudio <alias> volume to n`；**已实测生效**）。
        返回值：MS_BIND_OK=增益已下发到设备；MS_ERR_NOT_FOUND=句柄无效**或**设备不接受音量命令
        （此时增益**仍被记录**；要区分两种情况用 ms_audio_is_open 确认句柄）。
        ⚠ 2026-09-17 修正：此前用 `set <alias> audio volume to n`，实测被设备拒绝
        （290 = MCIERR_BAD_CONSTANT），且实现无条件返回 OK → **"看起来成功但音量从未生效"**。两处已修。
   ms_audio_loop：t8 循环播放（1/0）；**宿主驱动**——须持续 ms_audio_play，详见 audio_backend.hpp。
        ⚠ 旧注释写"Play 时 `play repeat`"是错的：waveaudio 不认 repeat（0x103），设备级循环做不到。 */
MS_API int  ms_audio_open(ms_engine* e, const char* path);         // 打开（wav/mp3——mci 类型探测）→ 句柄 id（≥10）
MS_API int  ms_audio_close(ms_engine* e, int64_t h);               // 关闭（释放后端资源）
MS_API int  ms_audio_play(ms_engine* e, int64_t h);                // 播放（open 后；状态→playing）
MS_API int  ms_audio_pause(ms_engine* e, int64_t h);               // 暂停（状态→paused）
MS_API int  ms_audio_seek(ms_engine* e, int64_t h, double ms);     // 定位（毫秒；ms>=0）
MS_API int  ms_audio_position(ms_engine* e, int64_t h, double* outMs);  // 当前播放位置（毫秒）
MS_API int  ms_audio_is_open(ms_engine* e, int64_t h);             // 1=open 0=非 open（含无效句柄=0）
MS_API int  ms_audio_volume(ms_engine* e, int64_t h, double gain); // 增益（0..1；OK=已下发，NOT_FOUND=句柄无效或设备不支持）
MS_API int  ms_audio_loop(ms_engine* e, int64_t h, int on);        // t8：循环（1/0；无效句柄=MS_ERR_NOT_FOUND）
/* ---- 手柄（t8：XInput——xinput1_4.dll 系统组件；4 槽位；边沿=本帧 EndFrame 清） ----
   按钮=0..9（A/B/X/Y/LB/RB/Back/Start/LeftStick/RightStick）；轴=0..5（LX/LY/RX/RY -1..1
   （deadzone 归零+重归一）；LT/RT 0..1）；pad=0..3（越界=MS_ERR_BAD_ARG）；
   无控制器/无 XInput：connected=0、按钮/轴=0（防御——不报错）。 */
MS_API int    ms_gamepad_count(ms_engine* e);                      // 槽位数（XInput=4；无 XInput=0）
MS_API int    ms_gamepad_connected(ms_engine* e, int pad);         // 1=已连接 0=未连接
MS_API int    ms_gamepad_button(ms_engine* e, int pad, int button);      // 当前按住
MS_API int    ms_gamepad_button_down(ms_engine* e, int pad, int button); // 本帧按下沿
MS_API int    ms_gamepad_button_up(ms_engine* e, int pad, int button);   // 本帧抬起沿
MS_API double ms_gamepad_axis(ms_engine* e, int pad, int axis);    // 模拟量（-1..1/0..1）