dotnet/HybridEngine.Bind/Interop.cs

using System;
using System.Runtime.InteropServices;

[assembly: System.Runtime.CompilerServices.InternalsVisibleTo("CsTestRunner")]
// P2：hostfxr 承载入口（编辑器直挂 .cs）——需要 ComponentBridge/SceneObject 内部构造等第一方宿主能力
[assembly: System.Runtime.CompilerServices.InternalsVisibleTo("HybridEngine.ScriptLoader")]

namespace HybridEngine.Engine.Internal;

// M2.5：ms_bind C ABI P/Invoke（纯 BCL——DllImport 仅）
public static class Native
{
    private const string Dll = "hybridengine";
    private const CallingConvention Conv = CallingConvention.Cdecl;

    [DllImport(Dll, CallingConvention = Conv)] public static extern IntPtr ms_engine_create([MarshalAs(UnmanagedType.LPUTF8Str)] string title, int width, int height, out int err);
    [DllImport(Dll, CallingConvention = Conv)] public static extern void ms_engine_destroy(IntPtr e);
    [DllImport(Dll, CallingConvention = Conv)] public static extern int ms_engine_tick(IntPtr e, double dt);
    [DllImport(Dll, CallingConvention = Conv)] public static extern int ms_engine_render(IntPtr e, IntPtr rendererCtx);
    [DllImport(Dll, CallingConvention = Conv)] public static extern int ms_engine_pump(IntPtr e);
    [DllImport(Dll, CallingConvention = Conv)] public static extern int ms_engine_resize(IntPtr e, int w, int h);
    [DllImport(Dll, CallingConvention = Conv)] public static extern double ms_engine_last_frame_ms(IntPtr e);
    [DllImport(Dll, CallingConvention = Conv)] public static extern ulong ms_engine_render_hash(IntPtr e);
    [DllImport(Dll, CallingConvention = Conv)] public static extern int ms_bind_live_engine_count();
    // t2：错误码→人类可读文案（静态 UTF-8）
    [DllImport(Dll, CallingConvention = Conv)] public static extern IntPtr ms_bind_error_text(int code);
    // G2/t137：输入 ABI（vk=KeyCode 值——Win32 VK 直通）
    [DllImport(Dll, CallingConvention = Conv)] public static extern int ms_input_key_down(IntPtr e, int vk);
    [DllImport(Dll, CallingConvention = Conv)] public static extern int ms_input_key_up(IntPtr e, int vk);
    [DllImport(Dll, CallingConvention = Conv)] public static extern int ms_input_get_key(IntPtr e, int vk);
    [DllImport(Dll, CallingConvention = Conv)] public static extern double ms_input_axis(IntPtr e, [MarshalAs(UnmanagedType.LPUTF8Str)] string name);
    [DllImport(Dll, CallingConvention = Conv)] public static extern int ms_input_get_button(IntPtr e, [MarshalAs(UnmanagedType.LPUTF8Str)] string action);

    // t1 GUI 平面 ABI：2D 绘制原语（ms_rnd_*——坐标 double、颜色 uint32 0xAARRGGBB（A=alpha 直通；现调用方全 FF=行为不变）；与 C++ IRenderer 同语义）
    [DllImport(Dll, CallingConvention = Conv)] public static extern int ms_rnd_clear_list(IntPtr e);   // 清空录制列表（非绘制原语——host 每帧帧首调用）
    [DllImport(Dll, CallingConvention = Conv)] public static extern int ms_rnd_clear(IntPtr e, uint color);
    [DllImport(Dll, CallingConvention = Conv)] public static extern int ms_rnd_clear_rect(IntPtr e, double x, double y, double w, double h, uint color);
    [DllImport(Dll, CallingConvention = Conv)] public static extern int ms_rnd_fill_rect(IntPtr e, double x, double y, double w, double h, uint color);
    [DllImport(Dll, CallingConvention = Conv)] public static extern int ms_rnd_fill_rounded_rect(IntPtr e, double x, double y, double w, double h, double radius, uint color);
    [DllImport(Dll, CallingConvention = Conv)] public static extern int ms_rnd_draw_line(IntPtr e, double x1, double y1, double x2, double y2, uint color, double thickness);
    [DllImport(Dll, CallingConvention = Conv)] public static extern int ms_rnd_fill_circle(IntPtr e, double cx, double cy, double r, uint color);
    [DllImport(Dll, CallingConvention = Conv)] public static extern int ms_rnd_draw_circle(IntPtr e, double cx, double cy, double r, uint color, double thickness);
    // t-perf：批量画圆（弹幕/粒子负载）——1 条命令画 N 个同色圆
    [DllImport(Dll, CallingConvention = Conv)] public static extern int ms_rnd_fill_circles(IntPtr e, double[] xyR, int count, uint color);
    [DllImport(Dll, CallingConvention = Conv)] public static extern int ms_rnd_draw_circles(IntPtr e, double[] xyR, int count, double thickness, uint color);
    // t-sprite：批量子弹（核心圆 + 外圈）——xy 每颗 2 个 double
    [DllImport(Dll, CallingConvention = Conv)] public static extern int ms_rnd_bullets(IntPtr e, double[] xy, int count, double r, double thickness, uint coreColor, uint rimColor);
    [DllImport(Dll, CallingConvention = Conv)] public static extern int ms_rnd_fill_triangle(IntPtr e, double x1, double y1, double x2, double y2, double x3, double y3, uint color);
    [DllImport(Dll, CallingConvention = Conv)] public static extern int ms_rnd_fill_quad(IntPtr e, double x1, double y1, double x2, double y2, double x3, double y3, double x4, double y4, uint color);
    [DllImport(Dll, CallingConvention = Conv)] public static extern int ms_rnd_blit_rect(IntPtr e, double x, double y, double w, double h, [In] uint[] srcPixels);
    [DllImport(Dll, CallingConvention = Conv)] public static extern int ms_rnd_blit_alpha(IntPtr e, double x, double y, double w, double h, [In] uint[] srcPixels);   // t1：src=0xAARRGGBB 逐像素合成
    [DllImport(Dll, CallingConvention = Conv)] public static extern int ms_rnd_clip_push(IntPtr e, double x, double y, double w, double h);   // t6：矩形裁剪入栈（≤8 深；栈顶生效）
    [DllImport(Dll, CallingConvention = Conv)] public static extern int ms_rnd_clip_push_rotated(IntPtr e, double cx, double cy, double w, double h, double angleRad);   // t-rot-clip：旋转矩形裁剪入栈（中心+角；angle=0≡矩形）
    [DllImport(Dll, CallingConvention = Conv)] public static extern int ms_rnd_clip_pop(IntPtr e);                                          // t6：弹栈（空栈=MS_ERR_INVALID_OP）

    // t1 GUI 平面 ABI：文本（ms_text_*——UTF-8；录制 Text 命令——回放绘制双面并参与哈希；size=像素 double）
    [DllImport(Dll, CallingConvention = Conv)] public static extern int ms_text_draw(IntPtr e, [MarshalAs(UnmanagedType.LPUTF8Str)] string utf8, double x, double y, double size, uint color);
    [DllImport(Dll, CallingConvention = Conv)] public static extern int ms_text_measure(IntPtr e, [MarshalAs(UnmanagedType.LPUTF8Str)] string utf8, double size, out double outW, out double outH);

    // t1 GUI 平面 ABI：鼠标（ms_input_mouse_*——button 0=左 1=中 2=右；wheel ±1）
    [DllImport(Dll, CallingConvention = Conv)] public static extern double ms_input_mouse_x(IntPtr e);
    [DllImport(Dll, CallingConvention = Conv)] public static extern double ms_input_mouse_y(IntPtr e);
    [DllImport(Dll, CallingConvention = Conv)] public static extern int ms_input_mouse_button(IntPtr e, int button);
    [DllImport(Dll, CallingConvention = Conv)] public static extern int ms_input_mouse_button_down(IntPtr e, int button);
    [DllImport(Dll, CallingConvention = Conv)] public static extern int ms_input_mouse_button_up(IntPtr e, int button);
    [DllImport(Dll, CallingConvention = Conv)] public static extern double ms_input_mouse_wheel_delta(IntPtr e);
    [DllImport(Dll, CallingConvention = Conv)] public static extern double ms_input_mouse_design_x(IntPtr e);
    [DllImport(Dll, CallingConvention = Conv)] public static extern double ms_input_mouse_design_y(IntPtr e);

    // —— t-auto：自动化输入注入（脚本/测试驱动 → 直接写引擎 Input，不依赖窗口消息）——
    [DllImport(Dll, CallingConvention = Conv)] public static extern int ms_input_inject_key(IntPtr e, int vk, int down);
    [DllImport(Dll, CallingConvention = Conv)] public static extern int ms_input_inject_mouse(IntPtr e, double x, double y, int button, int down);
    [DllImport(Dll, CallingConvention = Conv)] public static extern int ms_input_inject_move(IntPtr e, double x, double y);
    [DllImport(Dll, CallingConvention = Conv)] public static extern int ms_input_inject_wheel(IntPtr e, double x, double y, int delta);

    // t3：音频（WinMM(mci) 桥——引擎级句柄；单线程；句柄归属=引擎（ms_engine_destroy 释放全部）；close 后调用→MS_ERR_NOT_FOUND；
    //   open 返回 ≥10=句柄 id；0=非法；负/1..9=MS_ERR_*；position=毫秒；volume=增益 0..1（v1 仅记录）
    [DllImport(Dll, CallingConvention = Conv)] public static extern int ms_audio_open(IntPtr e, [MarshalAs(UnmanagedType.LPUTF8Str)] string path);
    [DllImport(Dll, CallingConvention = Conv)] public static extern int ms_audio_close(IntPtr e, long h);
    [DllImport(Dll, CallingConvention = Conv)] public static extern int ms_audio_play(IntPtr e, long h);
    [DllImport(Dll, CallingConvention = Conv)] public static extern int ms_audio_pause(IntPtr e, long h);
    [DllImport(Dll, CallingConvention = Conv)] public static extern int ms_audio_seek(IntPtr e, long h, double ms);
    [DllImport(Dll, CallingConvention = Conv)] public static extern int ms_audio_position(IntPtr e, long h, out double outMs);
    [DllImport(Dll, CallingConvention = Conv)] public static extern int ms_audio_is_open(IntPtr e, long h);
    [DllImport(Dll, CallingConvention = Conv)] public static extern int ms_audio_volume(IntPtr e, long h, double gain);
    [DllImport(Dll, CallingConvention = Conv)] public static extern int ms_audio_loop(IntPtr e, long h, int on);   // t8：循环（Play 时 repeat 生效）
    // t8：手柄（XInput——pad 0..3；button 0..9；axis 0..5；无控制器=防御值）
    [DllImport(Dll, CallingConvention = Conv)] public static extern int ms_gamepad_count(IntPtr e);
    [DllImport(Dll, CallingConvention = Conv)] public static extern int ms_gamepad_connected(IntPtr e, int pad);
    [DllImport(Dll, CallingConvention = Conv)] public static extern int ms_gamepad_button(IntPtr e, int pad, int button);
    [DllImport(Dll, CallingConvention = Conv)] public static extern int ms_gamepad_button_down(IntPtr e, int pad, int button);
    [DllImport(Dll, CallingConvention = Conv)] public static extern int ms_gamepad_button_up(IntPtr e, int pad, int button);
    [DllImport(Dll, CallingConvention = Conv)] public static extern double ms_gamepad_axis(IntPtr e, int pad, int axis);

    [DllImport(Dll, CallingConvention = Conv)] public static extern IntPtr ms_engine_scene(IntPtr e);
    // P2：多场景（SceneManager）——引擎持有场景列表 + 活动索引
    [DllImport(Dll, CallingConvention = Conv)] public static extern int ms_scenes_count(IntPtr e, out int outCount);
    [DllImport(Dll, CallingConvention = Conv)] public static extern int ms_scenes_get(IntPtr e, int index, out IntPtr outScene);
    [DllImport(Dll, CallingConvention = Conv)] public static extern int ms_scene_active_index(IntPtr e, out int outIndex);
    [DllImport(Dll, CallingConvention = Conv)] public static extern int ms_scene_set_active_index(IntPtr e, int index);
    [DllImport(Dll, CallingConvention = Conv)] public static extern int ms_scene_name(IntPtr e, IntPtr s, [Out] byte[] outName, int cap);
    [DllImport(Dll, CallingConvention = Conv)] public static extern int ms_scene_new(IntPtr e, [MarshalAs(UnmanagedType.LPUTF8Str)] string? name, out IntPtr outScene);
    [DllImport(Dll, CallingConvention = Conv)] public static extern int ms_scene_load_additive(IntPtr e, [MarshalAs(UnmanagedType.LPUTF8Str)] string assetPath, out IntPtr outScene);
    [DllImport(Dll, CallingConvention = Conv)] public static extern int ms_scene_unload(IntPtr e, IntPtr s);

    [DllImport(Dll, CallingConvention = Conv)] public static extern int ms_scene_add_root(IntPtr e, IntPtr s, [MarshalAs(UnmanagedType.LPUTF8Str)] string name, out long outId);
    [DllImport(Dll, CallingConvention = Conv)] public static extern int ms_scene_save(IntPtr e, IntPtr s, [MarshalAs(UnmanagedType.LPUTF8Str)] string assetPath);
    [DllImport(Dll, CallingConvention = Conv)] public static extern int ms_scene_load(IntPtr e, IntPtr s, [MarshalAs(UnmanagedType.LPUTF8Str)] string assetPath);
    [DllImport(Dll, CallingConvention = Conv)] public static extern int ms_scene_go_get(IntPtr e, IntPtr s, long id, out IntPtr outGo);
    [DllImport(Dll, CallingConvention = Conv)] public static extern int ms_scene_root_count(IntPtr e, IntPtr s, out int outCount);
    [DllImport(Dll, CallingConvention = Conv)] public static extern int ms_scene_root_get(IntPtr e, IntPtr s, int index, out IntPtr outGo);
[DllImport(Dll, CallingConvention = Conv)] public static extern int ms_scene_find(IntPtr e, IntPtr s, [MarshalAs(UnmanagedType.LPUTF8Str)] string name, out IntPtr outGo);
